--- a/web/typo3conf/ext/jumbotron/Resources/Private/Templates/Jumbotron.html
+++ b/web/typo3conf/ext/jumbotron/Resources/Private/Templates/Jumbotron.html
@@ -1,1 +1,9 @@
-test
+<div class="jumbotron">
+    <h1 class="display-3">{header_text}</h1>
+  <p class="lead">{subheader_text}</p>
+  <hr class="my-4">
+  <div class="body-text"><f:format.htmlentitiesDecode>{body_text}</f:format.htmlentitiesDecode></div>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="{button_link}" role="button">{button_text}</a>
+  </p>
+</div>
